--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,4 +1,64 @@
+@use "../../assets/sass/variables" as *;
+
 .card {
-    border-style: solid;
     margin: 1rem;
+    padding: 1rem;
+    width: 80vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: $color-lightgrey;
+    border-radius: 0.5rem;
+
+    &__image {
+        margin: 0.5rem auto;
+        max-width: 50%;
+        max-height: 50%;
+    }
+
+    &__title {
+        color: $color-bluegreen;
+        margin: 0.5rem auto;
+    }
+
+    &__tagline {
+        color: $color-navy;
+        margin: 0.5rem auto;
+    }
+
+    &__button {
+        background-color: $color-tangerine;
+        margin: 0.5rem auto;
+        padding: 0.25rem;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .card {
+        display: flex;
+        flex-direction: column;
+        max-width: 12.5rem;
+        justify-content: center;
+
+
+        &__image {
+            margin: 0.5rem auto;
+            max-width: 40%;
+            max-height: 40%;
+        }
+
+        &__name {
+            font-size: 1.5rem;
+        }
+
+        &__tagline {
+            font-size: 1rem;
+            font-style: italic;
+        }
+
+    }
+
+    .card:hover {
+        box-shadow: 0.3rem 0.3rem 0.3rem 0.3rem $color-bluegreen;
+    }
 }
