--- a/src/containers/Main/Main.scss
+++ b/src/containers/Main/Main.scss
@@ -1,3 +1,27 @@
+@use "../../assets/sass/variables" as *;
+
 .main {
     border-style: solid;
+    padding: 1rem;
+    background-color: $color-lightblue;
+    color: $color-navy;
+}
+
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+
+@media screen and (min-width: 1024px) {
+    .card-container {
+        // display: flex;
+        // flex-wrap: wrap;
+        // justify-content: space-between;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+        gap: 1rem;
+        // justify-items: center;
+    }
 }
