added toggle function for search menu

--- a/src/components/SearchFilterCheckBox/SearchFilterCheckbox.scss
+++ b/src/components/SearchFilterCheckBox/SearchFilterCheckbox.scss
@@ -1,1 +1,8 @@
 @use "../../assets/sass/variables" as *;
+
+
+@media screen and(min-width: 992px) {
+    .search-checkbox {
+        color: $color-navy;
+    }
+}
