--- a/src/containers/SearchMenu/SearchMenu.scss
+++ b/src/containers/SearchMenu/SearchMenu.scss
@@ -3,6 +3,41 @@
 .search-menu {
     background-color: $color-bluegreen;
     color: $color-yellow;
-    border-style: solid;
-    border-color: $color-tangerine;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 5;
+
+    &__content {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    &__cross {
+        position: absolute;
+        top: 1rem;
+        right: 3rem
+    }
+}
+
+@media screen and (min-width:992px) {
+    .search-menu {
+        background-color: $color-yellow;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 30%;
+        height: 30%;
+        border-radius: 1rem;
+        color: $color-navy;
+
+        &__cross {
+            right: 1rem;
+        }
+    }
 }
