created potential functions for filters and styled mobile and desktop version

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,2 +1,13 @@
 @use "./assets/sass/variables" as *;
 @use "./assets/sass/reset" as *;
+
+
+.filters {
+    background-color: $color-lightblue;
+}
+
+@media screen and (min-width: 992px) {
+    .main {
+        display: flex;
+    }
+}
