--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -2,7 +2,7 @@
 
 .card {
     margin: 1rem;
-    padding: 1rem;
+    padding: 0rem 1rem;
     width: 80vw;
     display: flex;
     flex-direction: column;
@@ -33,8 +33,9 @@
     }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 992px) {
     .card {
+        margin: 1rem 0.5rem 0.5rem 0.5rem;
         display: flex;
         flex-direction: column;
         max-width: 12.5rem;
