--- a/src/components/SearchBox/SearchBox.scss
+++ b/src/components/SearchBox/SearchBox.scss
@@ -3,4 +3,11 @@
 .search-box {
     color: $color-navy;
     padding: 1rem;
+    text-align: center;
+}
+
+@media screen and (min-width: 992px) {
+    .search-box {
+        font-size: 1.5rem;
+    }
 }
