--- a/src/components/FilterCheckBoxes/FilterCheckboxes.scss
+++ b/src/components/FilterCheckBoxes/FilterCheckboxes.scss
@@ -13,6 +13,7 @@
         flex-direction: column;
         padding-left: 1rem;
         font-size: 1.5rem;
+        font-family: $font-option-four;
     }
 }
 
