--- a/src/containers/SearchMenu/SearchMenu.scss
+++ b/src/containers/SearchMenu/SearchMenu.scss
@@ -35,6 +35,7 @@
         height: 30%;
         border-radius: 1rem;
         color: $color-navy;
+        font-family: $font-option-four;
 
         &__cross {
             right: 1rem;
