--- a/src/App.scss
+++ b/src/App.scss
@@ -4,10 +4,68 @@
 
 .filters {
     background-color: $color-lightblue;
+
+    .buttons__filter-section {
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .button__surprise {
+        background-color: $color-yellow;
+        padding: 0.5rem 0.5rem;
+        border-radius: 1rem;
+        margin-bottom: 0.5rem;
+        width: 8rem;
+        height: 2rem;
+        border-style: none;
+    }
+
+    .button__favourites {
+        background-color: $color-bluegreen;
+        padding: 0.5rem 0.5rem;
+        border-radius: 1rem;
+        margin-bottom: 0.5rem;
+        width: 8rem;
+        height: 2rem;
+        border-style: none;
+    }
 }
 
 @media screen and (min-width: 992px) {
     .main {
+        display: grid;
+        grid-template-columns: 0.75fr 4fr;
+    }
+
+    .buttons__filter-section {
+        padding-left: 1rem;
         display: flex;
+        flex-direction: column;
+        justify-content: center;
+
+    }
+
+    .button__surprise {
+        background-color: $color-yellow;
+        padding: 0.75rem 0.5rem;
+        border-radius: 1rem;
+        width: 12rem;
+        height: 3rem;
+        margin-right: 0rem;
+        border-style: none;
+        text-align: center;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+
+    .button__favourites {
+        background-color: $color-bluegreen;
+        padding: 0.75rem 0.5rem;
+        border-radius: 1rem;
+        width: 12rem;
+        height: 3rem;
+        margin-left: 0rem;
+        border-style: none;
+        text-align: center;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
 }
