--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -2,11 +2,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik+Vinyl&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Wendy+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
 
 $font-option-one: 'Unbounded', cursive;
 $font-option-two: 'Rubik Vinyl', cursive;
 $font-option-three: 'Wendy One', sans-serif;
 $font-option-four: 'Prompt', sans-serif;
+$font-option-five: 'Russo One', sans-serif;
 
 $color-lightblue: rgb(142, 202, 230);
 $color-bluegreen: rgb(33, 158, 188);
