--- a/src/components/FilterCheckBoxes/FilterCheckboxes.scss
+++ b/src/components/FilterCheckBoxes/FilterCheckboxes.scss
@@ -12,8 +12,8 @@
         display: flex;
         flex-direction: column;
         padding-left: 1rem;
-        font-size: 1.5rem;
-        font-family: $font-option-four;
+        font-size: 1.25rem;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
     }
 }
 
