--- a/src/components/SearchBox/SearchBox.scss
+++ b/src/components/SearchBox/SearchBox.scss
@@ -9,7 +9,7 @@
 @media screen and (min-width: 992px) {
     .search-box {
         font-size: 1.5rem;
-        font-family: $font-option-four;
+        font-family: $font-option-three;
         text-align: center;
     }
 }
